Ajout proxy searchable + refacto mineure builder